Fix overflow-x. Fix pages sizes.

--- a/src/App.css
+++ b/src/App.css
@@ -12,7 +12,7 @@ body {
 }
 
 .App {
-  width: 500px;
+  width: 100%;
   height: 800px;
   background-color: #ec4c8a;
   color: #fff;
