--- a/src/Assets/Styles/Details.css
+++ b/src/Assets/Styles/Details.css
@@ -11,4 +11,5 @@
 
 .detail-container {
   background-color: #ec4c8a;
+  width: 100vw;
 }
